scripts: update font family, minor fix
Signed-off-by: K.B.Dharun Krishna <kbdharunkrishna@gmail.com>

--- a/scripts/pdf/basic.css
+++ b/scripts/pdf/basic.css
@@ -1,7 +1,7 @@
 /* SPDX-License-Identifier: MIT */
 
 @font-face {
-    font-family: "Notosans";
+    font-family: "sans-serif";
     src: url("NotoSans-Regular.ttf") format("truetype");
 }
 
@@ -14,7 +14,7 @@ code {
 }
 
 h1, h2, h4, ul {
-    font-family: "Notosans";
+    font-family: "sans-serif";
 }
 
 .title-main {
